force-app/main/default/objects/LimitWatcherEvent__e/LimitWatcherEvent__e.object-meta.xml
<CustomObject>
    <description>Allows system limit monitoring to escape the execution context</description>
    <label>Limit Watcher Event</label>
    <pluralLabel>Limit Watcher Events</pluralLabel>
</CustomObject>