force-app/main/default/objects/LimitWatcherEvent__e/fields/CallContext__c.field-meta.xml
<CustomField>
    <fullName>CallContext__c</fullName>
    <description>The call context (calling class, entry point)</description>
    <label>Call Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>