force-app/main/default/objects/LimitWatcherEvent__e/fields/isPersisted__c.field-meta.xml
<CustomField>
    <fullName>isPersisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the record should be stored in the database</description>
    <label>Persist to Database</label>
    <type>Checkbox</type>
</CustomField>