force-app/main/default/objects/LimitWatcherEvent__e/fields/PublishImmediateDML__c.field-meta.xml
<CustomField>
    <fullName>PublishImmediateDML__c</fullName>
    <label>Publish Immediate DML</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>