force-app/main/default/objects/LimitWatcherEvent__e/fields/Queries__c.field-meta.xml
<CustomField>
    <fullName>Queries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>