force-app/main/default/objects/LimitWatcherEvent__e/fields/QueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>QueueableJobs__c</fullName>
    <label>Queueable Jobs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>