force-app/main/default/objects/LimitWatcherEvent__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>