force-app/main/default/objects/LimitWatcherEvent__e/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <length>40</length>
    <type>Text</type>
</CustomField>